# Book_DesignPatternWithCpp

./: .gitignore  CMakeLists.txt  LinkPage.html  README.md  TablePage.html  maildata.json  main.cpp
build_tool/: utf8_to_utf16.py
build_tool/cmake/: gtest.cmake  utils.cmake
builder_pattern/: builder.hpp  director.hpp  htmlbuilder.hpp  textbuilder.hpp
cmake/: gtest.cmake
include/: common.hpp  exception.hpp
include/abstract_factory_pattern/: abstract_factory.hpp  item.hpp  link.hpp  page.hpp  tray.hpp
include/abstract_factory_pattern/list_factory/: listfactory.hpp  listlink.hpp  listpage.hpp  listtray.hpp
include/abstract_factory_pattern/table_factory/: table_factory.hpp  table_link.hpp  table_page.hpp  table_tray.hpp
include/adapter_pattern/: banner.hpp  print.hpp  printbanner.hpp
include/bridge_pattern/: countdisplay.hpp  display.hpp  displayimpl.hpp  stringdisplayimpl.hpp
include/builder_pattern/: builder.hpp  director.hpp  htmlbuilder.hpp  textbuilder.hpp
include/chain_of_responsibility_pattern/: limit_support.hpp  no_support.hpp  odd_support.hpp  special_support.hpp  support.hpp  trouble.hpp
include/command_pattern/: command.hpp  drawcommand.hpp  macrocommand.hpp
include/command_pattern/header_for_moc/: main_window.hpp
include/composite_pattern/: directory.hpp  entry.hpp  exception.hpp  file.hpp
include/decorator_pattern/: border.hpp  display.hpp  fullborder.hpp  sideborder.hpp  stringdisplay.hpp
include/facade_pattern/: database.hpp  html_writer.hpp  pagemaker.hpp
include/factory_method_pattern/: factory.hpp  idcard.hpp  idcard_factory.hpp  product.hpp
include/flyweight_pattern/: bigchar.hpp  bigcharfactory.hpp  bigstring.hpp  flyweight_singleton_manager-internal.hpp  flyweight_singleton_manager.hpp
include/interpreter_pattern/: command_list_node.hpp  command_node.hpp  interpreter_context.hpp  node.hpp  parse_exception.hpp  primitive_command_node.hpp  program_node.hpp  repeat_command_node.hpp
include/iterator_pattern/: aggregate.hpp  book.hpp  bookshelf.hpp  bookshelf_iterator.hpp  iterator.hpp  object.hpp
include/mediator_pattern/: colleague.hpp  colleague_button.hpp  colleague_radiobutton.hpp  colleague_textfield.hpp  loginframe.hpp  mediator.hpp
include/mediator_pattern/header_for_moc/: colleague_button.hpp  colleague_radiobutton.hpp  colleague_textfield.hpp  loginframe.hpp
include/memento_pattern/: gamer.hpp  memento.hpp
include/observer_pattern/: digit_observer.hpp  graph_server.hpp  number_generator.hpp  observer.hpp  random_number_generator.hpp
include/prototype_pattern/: manager.hpp  messagebox.hpp  product.hpp  underline.hpp
include/proxy_pattern/: printable.hpp  printer.hpp  printerproxy.hpp
include/singleton_pattern/: singleton.hpp  singleton_manager-internal.hpp  singleton_manager.hpp
include/state_pattern/: .state.hpp.swp  context.hpp  day_state.hpp  night_state.hpp  state.hpp  state_singleton_manager-internal.hpp  state_singleton_manager.hpp
include/state_pattern/header_for_moc/: safeframe.hpp
include/strategy_pattern/: hand.hpp  player.hpp  probstrategy.hpp  strategy.hpp  winningstrategy.hpp
include/template_method_pattern/: abstract_display.hpp  char_display.hpp  string_display.hh  string_display.hpp
include/visitor_pattern/: element.hpp  list_visitor.hpp  vi_directory.hpp  vi_file.hpp  visitor.hpp
lib/: CMakeLists.txt
lib/abstract_factory_pattern/: abstract_factory.cpp
lib/builder_pattern/: director.cpp  htmlbuilder.cpp  textbuilder.cpp
lib/command_pattern/: main_window.cpp
lib/command_pattern/ui/: MainWindow.ui
lib/factory_method_pattern/: factory.cpp  idcard.cpp  idcard_factory.cpp
lib/flyweight_pattern/: bigcharfactory.cpp  flyweight_singleton_manager.cpp
lib/iterator_pattern/: book.cpp  bookshelf.cpp  bookshelf_iterator.cpp
lib/mediator_pattern/: loginframe.cpp
lib/mediator_pattern/ui/: LoginFrame.ui
lib/prototype_pattern/: manager.cpp
lib/singleton_pattern/: singleton.cpp  singleton_manager.cpp
lib/state_pattern/: day_state.cpp  night_state.cpp  safeframe.cpp  state_singleton_manager.cpp
lib/state_pattern/ui/: SafeFrame.ui
lib/strategy_pattern/: hand.cpp
lib/template_method_pattern/: char_display.cpp  string_display.cpp
prototype_pattern/: manager.hpp  messagebox.hpp  product.hpp  underline.hpp
singleton_pattern/: singleton.hpp  singleton_manager-internal.hpp  singleton_manager.cpp  singleton_manager.hpp
test/: CMakeLists.txt  google_test.cpp
thrid-party/: CMakeLists.txt
